--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
           <img class="profile__avatar" src="images/image.png" alt="Кусто">
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button button-hover">
-              <img src="images/Edit Button.svg">
-            </button>
+            <button class="profile__edit-button button-hover" aria-label="edit"></button>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button button-hover">
-          <img class="profile__add-button-vector" src="images/add-button.svg">
-        </button>
+        <button class="profile__add-button button-hover" aria-label="add"></button>
       </section>
 
       <section class="cards content__cards">
@@ -39,54 +35,42 @@
             <img class="card__image" src="images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
             <div class="card__info">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__icon button-hover">
-                <img class="card__icon_active" src="images/Group.svg">
-              </button>
+              <button class="card__icon card__icon_active button-hover" aria-label="like"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/kirill-pershin-1404681-unsplash.jpg" alt="Эльбрус">
             <div class="card__info">
               <h2 class="card__title">Гора Эльбрус</h2>
-              <button class="card__icon button-hover">
-                <img class="card__icon_active" src="images/Group.svg">
-              </button>
+              <button class="card__icon card__icon_active button-hover" aria-label="like"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
             <div class="card__info">
               <h2 class="card__title">Домбай</h2>
-              <button class="card__icon button-hover">
-                <img class="card__icon_active" src="images/Group.svg">
-              </button>
+              <button class="card__icon card__icon_active button-hover" aria-label="like"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/kirill-pershin-1404681-unsplash.jpg" alt="Эльбрус">
             <div class="card__info">
               <h2 class="card__title">Гора Эльбрус</h2>
-              <button class="card__icon button-hover">
-                <img class="card__icon_active" src="images/Group.svg">
-              </button>
+              <button class="card__icon card__icon_active button-hover" aria-label="like"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
             <div class="card__info">
               <h2 class="card__title">Домбай</h2>
-              <button class="card__icon button-hover">
-                <img class="card__icon_active" src="images/Group.svg">
-              </button>
+              <button class="card__icon card__icon_active button-hover" aria-label="like"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
             <div class="card__info">
               <h2 class="card__title">Карачаево-Ч...</h2>
-              <button class="card__icon button-hover">
-                <img class="card__icon_active" src="images/Group.svg">
-              </button>
+              <button class="card__icon card__icon_active button-hover" aria-label="like"></button>
             </div>
           </li>
         </ul>
@@ -94,16 +78,13 @@
 
       <section class="popup">
         <div class="popup__container">
-          <button class="popup__close button-hover">
-            <img src="images/add-button.svg">
-          </button>
+          <button class="popup__close button-hover" aria-label="close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input class="popup__field" type="text" value="Жак-Ив Кусто">
-          <input class="popup__field" type="text" value="Исследователь океана">
+          <input class="popup__field popup__field_type_name" type="text" value="Жак-Ив Кусто">
+          <input class="popup__field popup__field_type_about-me" type="text" value="Исследователь океана">
           <input class="popup__submit button-hover" type="submit" value="Сохранить">
         </div>
       </section>
-
     </main>
 
     <footer class="footer page__footer">
