--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form action="#" name="editForm" class="popup__form">
             <input class="popup__field popup__field_type_name" type="text" name="fieldName" value="Жак-Ив Кусто">
-            <input class="popup__field popup__field_type_about-me" type="text" name="fieldAboutMe" value="Исследователь океана">
+            <input class="popup__field popup__field_type_about-me" type="text" name="fieldAboutMe"
+              value="Исследователь океана">
             <button class="popup__submit button-hover" type="submit">Сохранить</button>
           </form>
         </div>
