--- a/index.html
+++ b/index.html
@@ -31,61 +31,42 @@
 
       <section class="cards content__cards">
         <ul class="cards__container">
-          <li class="card">
-            <img class="card__image" src="images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
-            <div class="card__info">
-              <h2 class="card__title">Карачаевск</h2>
-              <button class="card__icon button-hover" type="button" aria-label="like"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img class="card__image" src="images/kirill-pershin-1404681-unsplash.jpg" alt="Эльбрус">
-            <div class="card__info">
-              <h2 class="card__title">Гора Эльбрус</h2>
-              <button class="card__icon button-hover" type="button" aria-label="like"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img class="card__image" src="images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-            <div class="card__info">
-              <h2 class="card__title">Домбай</h2>
-              <button class="card__icon button-hover" type="button" aria-label="like"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img class="card__image" src="images/kirill-pershin-1404681-unsplash.jpg" alt="Эльбрус">
-            <div class="card__info">
-              <h2 class="card__title">Гора Эльбрус</h2>
-              <button class="card__icon button-hover" type="button" aria-label="like"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img class="card__image" src="images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-            <div class="card__info">
-              <h2 class="card__title">Домбай</h2>
-              <button class="card__icon button-hover" type="button" aria-label="like"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img class="card__image" src="images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
-            <div class="card__info">
-              <h2 class="card__title">Карачаево-Черкесская республика</h2>
-              <button class="card__icon button-hover" type="button" aria-label="like"></button>
-            </div>
-          </li>
         </ul>
       </section>
 
-      <section class="popup">
-        <div class="popup__container">
-          <button class="popup__close button-hover" type="button" aria-label="close"></button>
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <form action="#" name="editForm" class="popup__form">
-            <input class="popup__field popup__field_type_name" type="text" name="fieldName" value="Жак-Ив Кусто">
-            <input class="popup__field popup__field_type_about-me" type="text" name="fieldAboutMe"
-              value="Исследователь океана">
-            <button class="popup__submit button-hover" type="submit">Сохранить</button>
-          </form>
+      <section class="popups">
+        <div class="popup popup_type_profile">
+          <div class="popup__container">
+            <button class="popup__close button-hover" type="button" aria-label="close"></button>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <form action="#" name="editForm" class="popup__form popup__form_type_profile">
+              <input class="popup__field popup__field_type_name" type="text" name="fieldName" placeholder="Жак-Ив Кусто"
+                value="">
+              <input class="popup__field popup__field_type_about-me" type="text" placeholder="Исследователь океана"
+                name="fieldAboutMe" value="">
+              <button class="popup__submit button-hover" type="submit">Сохранить</button>
+            </form>
+          </div>
+        </div>
+        <div class="popup popup_type_cards">
+          <div class="popup__container">
+            <button class="popup__close button-hover" type="button" aria-label="close"></button>
+            <h2 class="popup__title">Новое место</h2>
+            <form action="#" name="editForm" class="popup__form popup__form_type_cards ">
+              <input class="popup__field popup__field_type_title" type="text" placeholder="Название" name="fieldTitle"
+                value="">
+              <input class="popup__field popup__field_type_link" type="text" placeholder="Ссылка на картинку"
+                name="fieldLink" value="">
+              <button class="popup__submit button-hover" type="submit">Сохранить</button>
+            </form>
+          </div>
+        </div>
+        <div class="popup popup_type_image">
+          <div class="popup__container-image">
+            <button class="popup__close button-hover" type="button" aria-label="close"></button>
+            <img class="popup__image" src="#" alt="">
+            <p class="popup__caption"></p>
+          </div>
         </div>
       </section>
     </main>
@@ -95,6 +76,18 @@
     </footer>
 
   </div>
+
+  <template class="card-template">
+    <li class="card">
+      <img class="card__image" src="#" alt="">
+      <button class="card__basket button-hover" type="button" aria-label="basket"></button>
+      <div class="card__info">
+        <h2 class="card__title"></h2>
+        <button class="card__icon button-hover" type="button" aria-label="like"></button>
+      </div>
+    </li>
+  </template>
+
   <script src="scripts/index.js"></script>
 </body>
 
