--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
         </ul>
       </section>
 
-      <section class="popups">
+      <section class="popups" tabindex="0">
         <div class="popup popup_type_profile">
           <div class="popup__container">
             <button class="popup__close button-hover" type="button" aria-label="close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form action="#" name="editForm" class="popup__form popup__form_type_profile">
-              <input class="popup__field popup__field_type_name" type="text" name="fieldName" placeholder="Жак-Ив Кусто"
-                value="">
-              <input class="popup__field popup__field_type_about-me" type="text" placeholder="Исследователь океана"
-                name="fieldAboutMe" value="">
+            <form action="#" name="editForm" class="popup__form popup__form_type_profile" novalidate>
+              <label class="popup__label">
+              <input class="popup__input popup__input_type_name" id="name-input" type="text" name="inputName" placeholder="Имя"
+                value="" minlength="2" maxlength="40" required>
+                <span class="popup__input-error name-input-error"></span>
+              </label>
+              <label class="popup__label">
+              <input class="popup__input popup__input_type_about-me" id="about-me-input" type="text" placeholder="О себе"
+                name="inputAboutMe" value="" minlength="2" maxlength="200" required>
+                <span class="popup__input-error about-me-input-error"></span>
+              </label>
               <button class="popup__submit button-hover" type="submit">Сохранить</button>
             </form>
           </div>
@@ -52,11 +58,17 @@
           <div class="popup__container">
             <button class="popup__close button-hover" type="button" aria-label="close"></button>
             <h2 class="popup__title">Новое место</h2>
-            <form action="#" name="editForm" class="popup__form popup__form_type_cards ">
-              <input class="popup__field popup__field_type_title" type="text" placeholder="Название" name="fieldTitle"
-                value="">
-              <input class="popup__field popup__field_type_link" type="text" placeholder="Ссылка на картинку"
-                name="fieldLink" value="">
+            <form action="#" name="editForm" class="popup__form popup__form_type_cards" novalidate>
+              <label class="popup__label">
+              <input class="popup__input popup__input_type_title" id="title-input" type="text" placeholder="Название" name="inputTitle"
+                value="" minlength="2" maxlength="30" required>
+                <span class="popup__input-error title-input-error"></span>
+              </label>
+              <label class="popup__label">
+              <input class="popup__input popup__input_type_link" id="url-input" type="url" placeholder="Ссылка на картинку"
+                name="inputLink" value="" required>
+                <span class="popup__input-error url-input-error"></span>
+              </label>
               <button class="popup__submit button-hover" type="submit">Сохранить</button>
             </form>
           </div>
@@ -90,6 +102,7 @@
 
   <script src="scripts/card.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="scripts/validate.js"></script>
 </body>
 
 </html>
