--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     </li>
   </template>
 
-  <script type="module" src="scripts/Card.js"></script>
-  <script type="module" src="scripts/FormValidator.js"></script>
+  <!-- <script type="module" src="scripts/Card.js"></script>
+  <script type="module" src="scripts/FormValidator.js"></script> -->
   <script type="module" src="scripts/index.js"></script>
 </body>
 
