7 работа исправления 1 ревью

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       </section>
     </main>
 
+    <footer class="footer page__footer">
+      <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+    </footer>
+
     <section class="popups" tabindex="0">
       <div class="popup popup_type_profile">
         <div class="popup__container">
@@ -55,7 +59,7 @@
           </form>
         </div>
       </div>
-      <div class="popup popup_type_cards" tabindex="0">
+      <div class="popup popup_type_cards">
         <div class="popup__container">
           <button class="popup__close button-hover" type="button" aria-label="close"></button>
           <h2 class="popup__title">Новое место</h2>
@@ -83,10 +87,6 @@
       </div>
     </section>
 
-    <footer class="footer page__footer">
-      <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
-    </footer>
-
   </div>
 
   <template class="card-template">
@@ -100,8 +100,6 @@
     </li>
   </template>
 
-  <!-- <script type="module" src="scripts/Card.js"></script>
-  <script type="module" src="scripts/FormValidator.js"></script> -->
   <script type="module" src="scripts/index.js"></script>
 </body>
 
