--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <button class="card__basket button-hover" type="button" aria-label="basket"></button>
       <div class="card__info">
         <h2 class="card__title"></h2>
-        <button class="card__icon button-hover" type="button" aria-label="like"></button>
+        <button class="card__icon" type="button" aria-label="like"></button>
       </div>
     </li>
   </template>
