--- a/src/index.html
+++ b/src/index.html
@@ -65,12 +65,12 @@
           <form action="#" name="editForm" class="popup__form popup__form_type_cards" novalidate>
             <label class="popup__label">
               <input class="popup__input popup__input_type_title" id="title-input" type="text" placeholder="Название"
-                name="inputTitle" value="" minlength="2" maxlength="30" required>
+                name="name" value="" minlength="2" maxlength="30" required>
               <span class="popup__input-error title-input-error"></span>
             </label>
             <label class="popup__label">
               <input class="popup__input popup__input_type_link" id="url-input" type="url"
-                placeholder="Ссылка на картинку" name="inputLink" value="" required>
+                placeholder="Ссылка на картинку" name="link" value="" required>
               <span class="popup__input-error url-input-error"></span>
             </label>
             <button class="popup__submit button-hover" type="submit">Сохранить</button>
