--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,13 @@
       <section class="profile content__profile">
         <div class="profile__container">
           <div class="profile__avatar-container">
-            <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="Кусто">
+            <img class="profile__avatar" src="#" alt="Кусто">
             <button class="profile__avatar-button button-hover" type="button" aria-label="edit"></button>
           </div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button button-hover" type="button" aria-label="edit"></button>
-            <p class="profile__subtitle">Исследователь океана</p>
+            <p class="profile__subtitle"></p>
           </div>
         </div>
         <button class="profile__add-button button-hover" type="button" aria-label="add"></button>
