--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,9 @@
           <h2 class="popup__title">Обновить аватар</h2>
           <form action="#" name="editForm" class="popup__form popup__form_type_profile-avatar" novalidate>
             <label class="popup__label popup__label_type_profile-avatar">
-              <input class="popup__input popup__input_type_link" id="url-input" type="url"
+              <input class="popup__input popup__input_type_link" id="url-input-avatar" type="url"
                 placeholder="Ссылка на картинку" name="link" value="" required>
-              <span class="popup__input-error url-input-error"></span>
+              <span class="popup__input-error url-input-avatar-error"></span>
             </label>
             <button class="popup__submit button-hover" type="submit">Сохранить</button>
           </form>
