--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section class="profile content__profile">
         <div class="profile__container">
           <div class="profile__avatar-container">
-            <img class="profile__avatar" src="#" alt="Кусто">
+            <img class="profile__avatar" src="#" alt="аватар">
             <button class="profile__avatar-button button-hover" type="button" aria-label="edit"></button>
           </div>
           <div class="profile__info">
@@ -118,6 +118,7 @@
   <template class="card-template">
     <li class="card">
       <img class="card__image" src="#" alt="">
+      <button class="card__basket button-hover" type="button" aria-label="basket"></button>
       <div class="card__info">
         <h2 class="card__title"></h2>
         <div class="card__likes-info">
@@ -127,10 +128,10 @@
       </div>
     </li>
   </template>
-
+  <!--
   <template class="card-basket-template">
     <button class="card__basket button-hover" type="button" aria-label="basket"></button>
-  </template>
+  </template> -->
 
 </body>
 
